clean up; prevent time numbers from jumping

--- a/app/components/task-panel/task-panel.less
+++ b/app/components/task-panel/task-panel.less
@@ -14,6 +14,9 @@
 
     > .clock-container {
         float: right;
+
+        margin-right: 15px;
+
         line-height: @height;
     }
 }
